--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GrandRP Finder | Dashboard</title>
+    <title>GrandRP Finder | Pro Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <style>
@@ -29,14 +29,31 @@
             background: rgba(13, 15, 18, 0.9);
             border: 1px solid rgba(255, 255, 255, 0.03);
             border-top: 3px solid var(--accent-color);
-            transition: all 0.2s ease-in-out;
+            transition: 0.2s ease-in-out;
         }
 
         .neo-card:hover {
             transform: translateY(-5px);
-            background: rgba(20, 22, 26, 1);
             box-shadow: 0 10px 20px -5px var(--accent-glow);
         }
+
+        /* Styl listy rozwijanej */
+        .server-select {
+            background: rgba(15, 17, 20, 0.95);
+            border: 1px solid rgba(255, 255, 255, 0.1);
+            color: white;
+            padding: 10px 20px;
+            border-radius: 12px;
+            font-size: 12px;
+            font-weight: 800;
+            text-transform: uppercase;
+            letter-spacing: 0.1em;
+            cursor: pointer;
+            outline: none;
+            transition: 0.3s;
+        }
+
+        .server-select:hover { border-color: var(--accent-color); }
 
         .search-container {
             background: #0d0f12;
@@ -44,54 +61,34 @@
             border-left: 5px solid var(--accent-color);
         }
 
-        .nav-panel {
-            background: rgba(15, 17, 20, 0.8);
-            backdrop-filter: blur(10px);
-            border: 1px solid rgba(255, 255, 255, 0.05);
-        }
-
         input[type="color"] {
             -webkit-appearance: none;
-            border: none;
             width: 30px;
             height: 30px;
             border-radius: 6px;
             cursor: pointer;
             background: none;
+            border: none;
         }
         input[type="color"]::-webkit-color-swatch { border-radius: 4px; border: 1px solid white; }
-
-        .custom-id-input {
-            background: rgba(255, 255, 255, 0.05);
-            border: 1px solid rgba(255, 255, 255, 0.1);
-            color: white;
-            font-size: 10px;
-            text-transform: uppercase;
-        }
     </style>
 </head>
 <body class="py-10 px-6">
 
     <div class="max-w-7xl mx-auto">
-        <div class="flex flex-col xl:flex-row justify-between items-center gap-8 mb-16">
+        <div class="flex flex-col md:flex-row justify-between items-center gap-8 mb-16 text-center md:text-left">
             <h1 class="text-5xl font-extrabold tracking-tighter italic uppercase glow-title leading-none">
                 GRANDRP <span style="color: var(--accent-color)">FINDER</span>
             </h1>
 
-            <div class="nav-panel flex flex-wrap items-center justify-center gap-6 px-6 py-4 rounded-2xl">
-                <div class="flex gap-2">
-                    <button onclick="changeSrv('8rml8v', this)" class="srv-tab active text-[10px] font-black uppercase tracking-widest px-4 py-2 rounded-lg bg-white/5 border border-white/5 hover:border-orange-500 transition-all">GrandRP</button>
-                    <button onclick="changeSrv('dyrx5y', this)" class="srv-tab text-[10px] font-black uppercase tracking-widest px-4 py-2 rounded-lg bg-white/5 border border-white/5 hover:border-orange-500 transition-all">BetterSide RP</button>
-                </div>
+            <div class="flex items-center gap-4 bg-white/5 p-2 rounded-2xl border border-white/5">
+                <select id="srvSelector" onchange="handleServerChange(this.value)" class="server-select">
+                    <option value="8rml8v">GrandRP (8RML8V)</option>
+                    <option value="dyrx5y">BetterSide RP (DYRX5Y)</option>
+                    <option value="custom">-- DODAJ WŁASNY KOD --</option>
+                </select>
 
-                <div class="flex items-center gap-2 border-l border-white/10 pl-6">
-                    <input type="text" id="customSrvId" placeholder="JOIN ID..." class="custom-id-input px-3 py-2 rounded-lg outline-none w-24 focus:border-orange-500 transition-all">
-                    <button onclick="useCustomId()" class="p-2 bg-white/5 rounded-lg hover:bg-white/10 transition-all">
-                        <svg class="w-4 h-4 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/></svg>
-                    </button>
-                </div>
-
-                <div class="flex items-center gap-3 border-l border-white/10 pl-6">
+                <div class="border-l border-white/10 pl-4 py-1">
                     <input type="color" id="picker" value="#f97316" oninput="applyTheme(this.value)">
                 </div>
             </div>
@@ -104,7 +101,7 @@
             </div>
             <div class="mt-4 text-center">
                 <span class="text-[10px] font-black uppercase tracking-[0.4em] text-white/30">
-                    Skanowany sektor: <span id="currentIdDisplay" class="text-white">8RML8V</span> | Aktywnych: <span id="count" class="text-lg italic font-extrabold" style="color: var(--accent-color)">0</span>
+                    Sektor: <span id="currentIdDisplay" class="text-white">8RML8V</span> | Aktywnych: <span id="count" class="text-lg italic font-extrabold" style="color: var(--accent-color)">0</span>
                 </span>
             </div>
         </div>
@@ -136,7 +133,7 @@
                     render(allData);
                 }
             } catch (e) {
-                document.getElementById('player-list').innerHTML = '<div class="col-span-full text-center py-20 text-red-500 font-bold uppercase">Błąd: Serwer nie istnieje lub API FiveM padło</div>';
+                document.getElementById('player-list').innerHTML = '<div class="col-span-full text-center py-20 text-red-500 font-bold uppercase tracking-widest">Błąd połączenia z tym kodem</div>';
             }
         }
 
@@ -152,34 +149,34 @@
             container.innerHTML = list.map(p => `
                 <div class="neo-card p-5 rounded-xl relative group">
                     <div class="flex flex-col">
-                        <span class="text-[7px] font-black text-white/20 uppercase tracking-widest mb-1 leading-none">ID CWELA</span>
-                        <span class="text-3xl font-black text-white mb-3 leading-none italic">${p.id}</span>
+                        <span class="text-[7px] font-black text-white/20 uppercase tracking-widest mb-1 leading-none text-left">ID CWELA</span>
+                        <span class="text-3xl font-black text-white mb-3 leading-none italic text-left">${p.id}</span>
                         <div class="h-[2px] w-4 transition-all group-hover:w-full" style="background: var(--accent-color)"></div>
-                        <span class="text-[9px] font-bold text-slate-400 uppercase truncate mt-3">${p.name}</span>
+                        <span class="text-[9px] font-bold text-slate-400 uppercase truncate mt-3 text-left">${p.name}</span>
                     </div>
                 </div>
             `).join('');
         }
 
-        function changeSrv(id, btn) {
-            document.querySelectorAll('.srv-tab').forEach(t => {
-                t.style.borderColor = 'rgba(255,255,255,0.05)';
-                t.classList.remove('active');
-            });
-            if(btn) {
-                btn.style.borderColor = 'var(--accent-color)';
-                btn.classList.add('active');
+        function handleServerChange(val) {
+            if (val === 'custom') {
+                const newId = prompt("Wprowadź nowy Join ID serwera (np. 8rml8v):");
+                if (newId && newId.trim().length > 3) {
+                    currentSrv = newId.trim().toLowerCase();
+                    // Dodaj nową opcję do listy
+                    const select = document.getElementById('srvSelector');
+                    const opt = document.createElement('option');
+                    opt.value = currentSrv;
+                    opt.innerHTML = `WŁASNY (${currentSrv.toUpperCase()})`;
+                    select.add(opt, select.options[select.options.length - 1]);
+                    select.value = currentSrv;
+                } else {
+                    document.getElementById('srvSelector').value = currentSrv;
+                }
+            } else {
+                currentSrv = val;
             }
-            currentSrv = id;
             fetchData();
-        }
-
-        function useCustomId() {
-            const input = document.getElementById('customSrvId');
-            const val = input.value.trim().toLowerCase();
-            if(val.length > 3) {
-                changeSrv(val, null);
-            }
         }
 
         const saved = localStorage.getItem('grand_theme_v2');
@@ -195,11 +192,6 @@
             const val = e.target.value.toLowerCase();
             render(allData.filter(p => p.name.toLowerCase().includes(val) || p.id.toString().includes(val)));
         };
-
-        // Obsługa Enter w wyszukiwarce ID
-        document.getElementById('customSrvId').addEventListener('keypress', (e) => {
-            if (e.key === 'Enter') useCustomId();
-        });
     </script>
 </body>
 </html>
