--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@400;700;800&display=swap" rel="stylesheet">
     <style>
         :root {
-            --accent-color: #f97316;
-            --accent-glow: rgba(249, 115, 22, 0.3);
+            /* Domyślny kolor ustawiony na Twój niebieski */
+            --accent-color: #0055FF; 
+            --accent-glow: rgba(0, 85, 255, 0.3);
         }
 
         body { 
@@ -34,8 +35,8 @@
             font-weight: 800;
             font-size: 12px;
             color: var(--accent-color);
-            opacity: 0.8;
-            margin-top: -10px;
+            margin-top: -5px;
+            opacity: 0.9;
         }
 
         .neo-card {
@@ -61,6 +62,7 @@
             font-weight: 800;
             text-transform: uppercase;
             outline: none;
+            cursor: pointer;
         }
 
         .search-container {
@@ -71,14 +73,14 @@
 
         input[type="color"] {
             -webkit-appearance: none;
-            width: 30px;
-            height: 30px;
-            border-radius: 6px;
+            width: 32px;
+            height: 32px;
+            border-radius: 8px;
             cursor: pointer;
             background: none;
             border: none;
         }
-        input[type="color"]::-webkit-color-swatch { border-radius: 4px; border: 1px solid white; }
+        input[type="color"]::-webkit-color-swatch { border-radius: 6px; border: 2px solid white; }
     </style>
 </head>
 <body class="py-16 px-6">
@@ -99,7 +101,7 @@
                 </select>
 
                 <div class="border-l border-white/10 pl-4 py-1">
-                    <input type="color" id="picker" value="#f97316" oninput="applyTheme(this.value)">
+                    <input type="color" id="picker" value="#0055FF" oninput="updateAccentColor(this.value)">
                 </div>
             </div>
         </div>
@@ -111,7 +113,7 @@
             </div>
             
             <div class="inline-flex items-center gap-6 px-10 py-3 rounded-full bg-white/5 border border-white/5 backdrop-blur-md">
-                <span class="text-[11px] font-black uppercase tracking-[0.5em] text-white/30">ZAREJESTROWANO:</span>
+                <span class="text-[11px] font-black uppercase tracking-[0.5em] text-white/40">ZAREJESTROWANO:</span>
                 <span id="count" class="text-3xl italic font-black" style="color: var(--accent-color)">0</span>
             </div>
         </div>
@@ -122,15 +124,21 @@
 
     <script>
         let currentSrv = '8rml8v';
-        let allData = [];
+        let allPlayers = [];
 
-        function applyTheme(color) {
+        // MODUŁ KOLORÓW
+        function updateAccentColor(color) {
             const root = document.documentElement;
             root.style.setProperty('--accent-color', color);
-            root.style.setProperty('--accent-glow', color + '44');
-            localStorage.setItem('przmx_tracker_theme', color);
+            // Tworzenie przezroczystej poświaty z HEX
+            const r = parseInt(color.slice(1, 3), 16);
+            const g = parseInt(color.slice(3, 5), 16);
+            const b = parseInt(color.slice(5, 7), 16);
+            root.style.setProperty('--accent-glow', `rgba(${r}, ${g}, ${b}, 0.3)`);
+            localStorage.setItem('przmx_color_pref', color);
         }
 
+        // POBIERANIE DANYCH
         async function fetchData() {
             const proxy = "https://api.allorigins.win/raw?url=";
             const target = `https://servers-frontend.fivem.net/api/servers/single/${currentSrv}`;
@@ -138,26 +146,26 @@
                 const r = await fetch(`${proxy}${encodeURIComponent(target)}&t=${Date.now()}`);
                 const d = await r.json();
                 if (d?.Data?.players) {
-                    allData = d.Data.players.sort((a, b) => a.id - b.id);
-                    render(allData);
+                    allPlayers = d.Data.players.sort((a, b) => a.id - b.id);
+                    renderList(allPlayers);
                 }
             } catch (e) {
-                document.getElementById('player-list').innerHTML = '<div class="col-span-full text-center py-20 text-red-500 font-bold uppercase tracking-widest opacity-50">BŁĄD POŁĄCZENIA Z SERWEREM</div>';
+                document.getElementById('player-list').innerHTML = '<div class="col-span-full text-center py-20 text-red-500 font-bold uppercase opacity-50">BRAK POŁĄCZENIA Z SEKTOREM</div>';
             }
         }
 
-        function render(list) {
+        function renderList(list) {
             document.getElementById('count').innerText = list.length;
             const container = document.getElementById('player-list');
             
             if (list.length === 0) {
-                container.innerHTML = '<div class="col-span-full text-center py-32 opacity-10 uppercase font-black italic tracking-[1em]">BRAK SYGNAŁU</div>';
+                container.innerHTML = '<div class="col-span-full text-center py-32 opacity-10 uppercase font-black italic tracking-[1em]">PUSTY SEKTOR</div>';
                 return;
             }
 
             container.innerHTML = list.map(p => `
                 <div class="neo-card p-6 rounded-2xl relative group overflow-hidden">
-                    <div class="flex flex-col relative z-10">
+                    <div class="flex flex-col relative z-10 text-left">
                         <span class="text-[8px] font-black text-white/20 uppercase tracking-widest mb-1">ID CWELA</span>
                         <span class="text-4xl font-black text-white mb-4 leading-none italic">${p.id}</span>
                         <div class="h-[3px] w-6 mb-4 transition-all group-hover:w-full" style="background: var(--accent-color)"></div>
@@ -169,13 +177,13 @@
 
         function handleServerChange(val) {
             if (val === 'custom') {
-                const newId = prompt("Wprowadź Join ID:");
+                const newId = prompt("Wprowadź Join ID serwera:");
                 if (newId && newId.trim().length > 3) {
                     currentSrv = newId.trim().toLowerCase();
                     const select = document.getElementById('srvSelector');
                     const opt = document.createElement('option');
                     opt.value = currentSrv;
-                    opt.innerHTML = `WŁASNY: ${currentSrv.toUpperCase()}`;
+                    opt.innerHTML = `KOD: ${currentSrv.toUpperCase()}`;
                     select.add(opt, select.options[select.options.length - 1]);
                     select.value = currentSrv;
                 }
@@ -185,10 +193,13 @@
             fetchData();
         }
 
-        const saved = localStorage.getItem('przmx_tracker_theme');
-        if (saved) {
-            applyTheme(saved);
-            document.getElementById('picker').value = saved;
+        // INICJALIZACJA
+        const savedColor = localStorage.getItem('przmx_color_pref');
+        if (savedColor) {
+            updateAccentColor(savedColor);
+            document.getElementById('picker').value = savedColor;
+        } else {
+            updateAccentColor('#0055FF'); // Domyślny startowy
         }
 
         fetchData();
@@ -196,7 +207,7 @@
 
         document.getElementById('search').oninput = (e) => {
             const val = e.target.value.toLowerCase();
-            render(allData.filter(p => p.name.toLowerCase().includes(val) || p.id.toString().includes(val)));
+            renderList(allPlayers.filter(p => p.name.toLowerCase().includes(val) || p.id.toString().includes(val)));
         };
     </script>
 </body>
