--- a/index.html
+++ b/index.html
@@ -51,30 +51,28 @@
             color: var(--accent-color);
         }
 
-        /* Nowy, bardziej estetyczny kafelek */
         .neo-card {
-            background: rgba(13, 15, 18, 0.7);
-            border: 1px solid rgba(255, 255, 255, 0.05);
+            background: rgba(13, 15, 18, 0.85);
+            border: 1px solid rgba(255, 255, 255, 0.03);
             border-left: 3px solid var(--accent-color);
-            backdrop-filter: blur(10px);
-            transition: 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+            backdrop-filter: blur(12px);
+            transition: 0.3s cubic-bezier(0.4, 0, 0.2, 1);
             position: relative;
-            overflow: hidden;
         }
 
         .neo-card:hover {
-            transform: scale(1.02);
-            background: rgba(20, 23, 28, 0.9);
+            transform: translateY(-5px);
+            background: rgba(20, 23, 28, 0.95);
             border-color: var(--accent-color);
-            box-shadow: 0 10px 30px -10px var(--accent-glow);
+            box-shadow: 0 15px 35px -15px var(--accent-glow);
         }
 
         .server-select {
             background: rgba(15, 17, 20, 0.95);
             border: 1px solid rgba(255, 255, 255, 0.1);
             color: white;
-            padding: 10px 20px;
-            border-radius: 12px;
+            padding: 12px 24px;
+            border-radius: 14px;
             font-size: 11px;
             font-weight: 800;
             text-transform: uppercase;
@@ -85,30 +83,30 @@
         .search-container {
             background: #0d0f12;
             border: 1px solid rgba(255, 255, 255, 0.05);
-            border-bottom: 4px solid var(--accent-color);
+            border-bottom: 5px solid var(--accent-color);
         }
 
         .color-module {
             background: rgba(15, 17, 20, 0.8);
             border: 1px solid rgba(255, 255, 255, 0.05);
-            padding: 8px 16px;
-            border-radius: 14px;
+            padding: 10px 20px;
+            border-radius: 16px;
             display: flex;
             align-items: center;
-            gap: 10px;
+            gap: 12px;
             backdrop-filter: blur(10px);
         }
 
         input[type="color"] {
             -webkit-appearance: none;
-            width: 28px;
-            height: 28px;
-            border-radius: 8px;
+            width: 35px;
+            height: 35px;
+            border-radius: 10px;
             cursor: pointer;
             background: none;
             border: none;
         }
-        input[type="color"]::-webkit-color-swatch { border-radius: 6px; border: 1px solid white; }
+        input[type="color"]::-webkit-color-swatch { border-radius: 8px; border: 2px solid white; }
     </style>
 </head>
 <body class="py-16 px-6">
@@ -148,7 +146,7 @@
 
         <div class="max-w-3xl w-full mb-16">
             <div class="search-container rounded-3xl overflow-hidden shadow-2xl mb-8">
-                <input type="text" id="search" placeholder="SZUKAJ CWELA..." 
+                <input type="text" id="search" placeholder="SZUKAJ CELU..." 
                     class="w-full bg-transparent py-8 px-10 text-white outline-none font-extrabold text-4xl placeholder-white/5 uppercase tracking-tighter text-center">
             </div>
             
@@ -158,8 +156,8 @@
             </div>
         </div>
 
-        <div id="player-list" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-4 w-full px-4">
-            <div class="col-span-full py-20 text-center opacity-30 italic uppercase tracking-widest">Inicjalizacja systemu...</div>
+        <div id="player-list" class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 gap-5 w-full px-4 text-left">
+            <div class="col-span-full py-20 text-center opacity-30 italic">TRWA ŁADOWANIE SYSTEMU...</div>
         </div>
     </div>
 
@@ -204,21 +202,21 @@
 
             container.innerHTML = list.map(p => {
                 const isGoat = p.name.toLowerCase().includes('przmx') || p.name.toLowerCase().includes('kejcpi');
-                const label = isGoat ? 'GOAT' : 'CWEL';
+                const label = isGoat ? 'NICK GOATA' : 'NICK CWELA';
                 
                 return `
-                    <div class="neo-card p-5 rounded-xl flex items-center justify-between group">
+                    <div class="neo-card p-6 rounded-2xl flex items-center justify-between group">
                         <div class="flex flex-col gap-1 min-w-0">
-                            <span class="text-[9px] font-black ${isGoat ? 'text-white' : 'text-white/30'} uppercase tracking-[0.2em]">
+                            <span class="text-[9px] font-black ${isGoat ? 'text-white' : 'text-white/30'} uppercase tracking-[0.2em] leading-none mb-1">
                                 ${label}
                             </span>
-                            <h3 class="text-lg font-bold ${isGoat ? 'text-white' : 'text-slate-200'} truncate pr-2">
+                            <h3 class="text-xl font-bold ${isGoat ? 'text-white underline decoration-2 underline-offset-4' : 'text-slate-200'} truncate pr-4">
                                 ${p.name}
                             </h3>
                         </div>
-                        <div class="flex flex-col items-end">
-                            <span class="text-[8px] font-bold opacity-20 uppercase">UID</span>
-                            <span class="text-2xl font-black italic leading-none" style="color: ${isGoat ? '#fff' : 'var(--accent-color)'}">
+                        <div class="flex flex-col items-end shrink-0">
+                            <span class="text-[9px] font-bold text-white/10 uppercase mb-1">ID</span>
+                            <span class="text-3xl font-black italic leading-none" style="color: ${isGoat ? '#fff' : 'var(--accent-color)'}">
                                 ${p.id}
                             </span>
                         </div>
@@ -235,7 +233,7 @@
                     const select = document.getElementById('srvSelector');
                     const opt = document.createElement('option');
                     opt.value = currentSrv;
-                    opt.innerHTML = `LINK: ${currentSrv.toUpperCase()}`;
+                    opt.innerHTML = `SEKTOR: ${currentSrv.toUpperCase()}`;
                     select.add(opt, select.options[select.options.length - 1]);
                     select.value = currentSrv;
                 }
