--- a/index.html
+++ b/index.html
@@ -34,8 +34,9 @@
         .modal-box { background: #0d0f12; border: 1px solid var(--accent-color); max-width: 450px; width: 100%; border-radius: 24px; padding: 35px; box-shadow: 0 0 100px -30px var(--accent-glow); }
 
         .search-container { background: rgba(13, 15, 18, 0.9); border: 1px solid rgba(255, 255, 255, 0.05); border-bottom: 5px solid var(--accent-color); }
-        .fav-star { transition: 0.2s; color: rgba(255,255,255,0.1); width: 22px; height: 22px; }
-        .fav-star.active { color: #FFD700; }
+        .fav-star { transition: 0.2s; color: rgba(255,255,255,0.1); width: 22px; height: 22px; cursor: pointer; }
+        .fav-star.active { color: #FFD700; filter: drop-shadow(0 0 5px #FFD700); }
+        .fav-star:hover { color: rgba(255, 215, 0, 0.5); }
     </style>
 </head>
 <body class="py-16 px-6">
@@ -51,7 +52,7 @@
                         <span id="modalStatus" class="text-2xl font-black italic tracking-tighter uppercase">---</span>
                     </div>
                     <div class="text-right">
-                        <span class="text-[9px] font-bold text-white/20 uppercase block mb-1">Czas Sesji</span>
+                        <span class="text-[9px] font-bold text-white/20 uppercase block mb-1">Czas Sesji dzisiaj</span>
                         <span id="modalDuration" class="text-xl font-bold text-white italic">---</span>
                     </div>
                 </div>
@@ -152,6 +153,7 @@
         }
 
         function renderList() {
+            playerHistory = checkDailyReset();
             const searchVal = document.getElementById('search').value.toLowerCase();
             let container = document.getElementById('player-list');
             container.innerHTML = "";
@@ -171,7 +173,12 @@
                     card.onclick = () => openModal(name);
                     card.innerHTML = `
                         <div class="flex flex-col gap-1 min-w-0">
-                            <span class="text-[9px] font-black ${isOnline ? 'text-green-500' : 'text-red-500'} uppercase tracking-[0.2em]">${isOnline ? 'ONLINE' : 'OFFLINE'}</span>
+                            <div class="flex items-center gap-3">
+                                <span class="text-[9px] font-black ${isOnline ? 'text-green-500' : 'text-red-500'} uppercase tracking-[0.2em]">${isOnline ? 'ONLINE' : 'OFFLINE'}</span>
+                                <svg onclick="event.stopPropagation(); toggleFav('${name}')" class="fav-star ${isFav ? 'active' : ''}" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
+                                </svg>
+                            </div>
                             <h3 class="text-xl font-bold text-slate-200 truncate pr-4">${name}</h3>
                         </div>
                         <div class="flex flex-col items-end shrink-0">
@@ -192,7 +199,9 @@
                         <div class="flex flex-col gap-1 min-w-0">
                             <div class="flex items-center gap-3">
                                 <span class="text-[9px] font-black text-white/30 uppercase tracking-[0.2em]">NICK</span>
-                                <svg onclick="event.stopPropagation(); toggleFav('${p.name}')" class="fav-star ${isFav ? 'active' : ''}" fill="currentColor" viewBox="0 0 20 20"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/></svg>
+                                <svg onclick="event.stopPropagation(); toggleFav('${p.name}')" class="fav-star ${isFav ? 'active' : ''}" fill="currentColor" viewBox="0 0 20 20">
+                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
+                                </svg>
                             </div>
                             <h3 class="text-xl font-bold text-slate-200 truncate pr-4">${p.name}</h3>
                         </div>
@@ -209,6 +218,7 @@
 
         function openModal(name) {
             const h = playerHistory[name];
+            if(!h) return;
             const isOnline = h.isOnline;
             const now = new Date().getTime();
             const duration = Math.round(((isOnline ? now : h.lastSeen) - h.firstSeen) / 60000);
@@ -222,16 +232,22 @@
         }
 
         function closeModal() { document.getElementById('overlay').style.display = 'none'; }
+        
         function toggleFav(n) {
-            favorites.includes(n) ? favorites.splice(favorites.indexOf(n), 1) : favorites.push(n);
+            const index = favorites.indexOf(n);
+            if (index === -1) favorites.push(n);
+            else favorites.splice(index, 1);
             localStorage.setItem('przmx_favs', JSON.stringify(favorites));
             renderList();
         }
+
         function toggleFavorites() {
             showOnlyFavs = !showOnlyFavs;
             document.getElementById('favToggleBtn').classList.toggle('border-white', showOnlyFavs);
+            document.getElementById('favToggleBtn').classList.toggle('text-white', showOnlyFavs);
             renderList();
         }
+
         function handleServerChange(v) { currentSrv = v; fetchData(); }
 
         document.getElementById('search').oninput = renderList;
