--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
         .search-container { background: rgba(13, 15, 18, 0.9); border: 1px solid rgba(255, 255, 255, 0.05); border-bottom: 5px solid var(--accent-color); }
         .fav-star { transition: 0.2s; color: rgba(255,255,255,0.1); width: 22px; height: 22px; cursor: pointer; }
         .fav-star.active { color: #FFD700; filter: drop-shadow(0 0 5px #FFD700); }
-        .fav-star:hover { color: rgba(255, 215, 0, 0.5); }
     </style>
 </head>
 <body class="py-16 px-6">
@@ -44,7 +43,6 @@
     <div id="overlay" onclick="closeModal()">
         <div class="modal-box text-center" onclick="event.stopPropagation()">
             <h2 id="modalName" class="text-4xl font-black text-white italic uppercase mb-6 tracking-tighter">---</h2>
-            
             <div class="grid grid-cols-1 gap-4 text-left">
                 <div class="bg-white/5 p-4 rounded-xl border border-white/5 flex justify-between items-center">
                     <div>
@@ -56,7 +54,6 @@
                         <span id="modalDuration" class="text-xl font-bold text-white italic">---</span>
                     </div>
                 </div>
-
                 <div class="bg-white/5 p-4 rounded-xl border border-white/5 text-center">
                     <span class="text-[9px] font-bold text-white/20 uppercase block mb-2 italic">Historia ID</span>
                     <div id="modalLogs" class="text-blue-400 font-black text-2xl tracking-widest"></div>
@@ -126,8 +123,8 @@
             const proxy = "https://api.allorigins.win/raw?url=";
             const target = `https://servers-frontend.fivem.net/api/servers/single/${currentSrv}`;
             try {
-                const r = await fetch(`${proxy}${encodeURIComponent(target)}&t=${Date.now()}`);
-                const d = await r.json();
+                const response = await fetch(`${proxy}${encodeURIComponent(target)}&t=${Date.now()}`);
+                const d = await response.json();
                 if (d?.Data?.players) {
                     const now = new Date().getTime();
                     d.Data.players.forEach(p => {
@@ -149,7 +146,7 @@
                     onlinePlayers = d.Data.players.sort((a, b) => a.id - b.id);
                     renderList();
                 }
-            } catch (e) { setTimeout(fetchData, 5000); }
+            } catch (e) { console.error("Błąd pobierania"); }
         }
 
         function renderList() {
@@ -161,11 +158,10 @@
             if (searchVal.length > 0) {
                 const historyMatches = Object.keys(playerHistory).filter(name => name.toLowerCase().includes(searchVal));
                 historyMatches.forEach(name => {
-                    const p = playerHistory[name];
-                    const isOnline = p.isOnline;
-                    const id = isOnline ? (onlinePlayers.find(op => op.name === name)?.id || p.idHistory[p.idHistory.length-1]) : p.idHistory[p.idHistory.length-1];
+                    const h = playerHistory[name];
+                    const isOnline = h.isOnline;
+                    const id = isOnline ? (onlinePlayers.find(op => op.name === name)?.id || h.idHistory[h.idHistory.length-1]) : h.idHistory[h.idHistory.length-1];
                     const isFav = favorites.includes(name);
-
                     if (showOnlyFavs && !isFav) return;
 
                     const card = document.createElement('div');
@@ -175,17 +171,14 @@
                         <div class="flex flex-col gap-1 min-w-0">
                             <div class="flex items-center gap-3">
                                 <span class="text-[9px] font-black ${isOnline ? 'text-green-500' : 'text-red-500'} uppercase tracking-[0.2em]">${isOnline ? 'ONLINE' : 'OFFLINE'}</span>
-                                <svg onclick="event.stopPropagation(); toggleFav('${name}')" class="fav-star ${isFav ? 'active' : ''}" fill="currentColor" viewBox="0 0 20 20">
-                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
-                                </svg>
+                                <svg onclick="event.stopPropagation(); toggleFav('${name}')" class="fav-star ${isFav ? 'active' : ''}" fill="currentColor" viewBox="0 0 20 20"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/></svg>
                             </div>
                             <h3 class="text-xl font-bold text-slate-200 truncate pr-4">${name}</h3>
                         </div>
                         <div class="flex flex-col items-end shrink-0">
                             <span class="text-[9px] font-bold text-white/10 uppercase mb-1">ID</span>
                             <span class="text-4xl font-black italic" style="color: ${isOnline ? 'var(--accent-color)' : '#ef4444'}">${id}</span>
-                        </div>
-                    `;
+                        </div>`;
                     container.appendChild(card);
                 });
             } else {
@@ -199,17 +192,14 @@
                         <div class="flex flex-col gap-1 min-w-0">
                             <div class="flex items-center gap-3">
                                 <span class="text-[9px] font-black text-white/30 uppercase tracking-[0.2em]">NICK</span>
-                                <svg onclick="event.stopPropagation(); toggleFav('${p.name}')" class="fav-star ${isFav ? 'active' : ''}" fill="currentColor" viewBox="0 0 20 20">
-                                    <path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/>
-                                </svg>
+                                <svg onclick="event.stopPropagation(); toggleFav('${p.name}')" class="fav-star ${isFav ? 'active' : ''}" fill="currentColor" viewBox="0 0 20 20"><path d="M9.049 2.927c.3-.921 1.603-.921 1.902 0l1.07 3.292a1 1 0 00.95.69h3.462c.969 0 1.371 1.24.588 1.81l-2.8 2.034a1 1 0 00-.364 1.118l1.07 3.292c.3.921-.755 1.688-1.54 1.118l-2.8-2.034a1 1 0 00-1.175 0l-2.8 2.034c-.784.57-1.838-.197-1.539-1.118l1.07-3.292a1 1 0 00-.364-1.118L2.98 8.72c-.783-.57-.38-1.81.588-1.81h3.461a1 1 0 00.951-.69l1.07-3.292z"/></svg>
                             </div>
                             <h3 class="text-xl font-bold text-slate-200 truncate pr-4">${p.name}</h3>
                         </div>
                         <div class="flex flex-col items-end shrink-0">
                             <span class="text-[9px] font-bold text-white/10 uppercase mb-1">ID</span>
                             <span class="text-4xl font-black italic" style="color: var(--accent-color)">${p.id}</span>
-                        </div>
-                    `;
+                        </div>`;
                     container.appendChild(card);
                 });
             }
@@ -222,7 +212,6 @@
             const isOnline = h.isOnline;
             const now = new Date().getTime();
             const duration = Math.round(((isOnline ? now : h.lastSeen) - h.firstSeen) / 60000);
-
             document.getElementById('modalName').innerText = name;
             document.getElementById('modalStatus').innerText = isOnline ? "Online" : "Offline";
             document.getElementById('modalStatus').style.color = isOnline ? "#22c55e" : "#ef4444";
@@ -244,11 +233,15 @@
         function toggleFavorites() {
             showOnlyFavs = !showOnlyFavs;
             document.getElementById('favToggleBtn').classList.toggle('border-white', showOnlyFavs);
-            document.getElementById('favToggleBtn').classList.toggle('text-white', showOnlyFavs);
             renderList();
         }
 
-        function handleServerChange(v) { currentSrv = v; fetchData(); }
+        function handleServerChange(v) { 
+            currentSrv = v; 
+            document.getElementById('player-list').innerHTML = '<div class="col-span-full py-20 text-center italic opacity-50 uppercase tracking-widest animate-pulse">Ładowanie danych...</div>';
+            document.getElementById('count').innerText = '0';
+            fetchData(); 
+        }
 
         document.getElementById('search').oninput = renderList;
         const savedColor = localStorage.getItem('przmx_color');
